--- a/MMA/app/src/main/res/layout/new_xpense_fragment.xml
+++ b/MMA/app/src/main/res/layout/new_xpense_fragment.xml
@@ -7,9 +7,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.viktor.mma.MainActivity">
+    android:paddingTop="@dimen/activity_vertical_margin">
 
     <TextView
         android:layout_width="wrap_content"
@@ -20,26 +18,26 @@
         android:layout_height="wrap_content"
         android:text="Name.."
         android:id="@+id/itemNameText"
-        android:layout_above="@id/categoryDropDown"
+        android:layout_above="@+id/categoryDropDown"
         android:layout_centerHorizontal="true"/>
     <Spinner
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/categoryDropDown"
-        android:layout_above="@id/itemPriceText"
+        android:layout_above="@+id/itemPriceText"
         android:layout_centerHorizontal="true"/>
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Price.."
         android:id="@+id/itemPriceText"
-        android:layout_above="@id/donebutton"
+        android:layout_above="@+id/doneButton"
         android:layout_centerHorizontal="true"/>
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Done"
-        android:id="@+id/donebutton"
+        android:id="@+id/doneButton"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="55dp" />
