--- a/MMA/app/src/main/res/layout/overview_fragment.xml
+++ b/MMA/app/src/main/res/layout/overview_fragment.xml
@@ -15,7 +15,25 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Overview" />
+        android:text="Overview"
+        android:id="@+id/textView25" />
+
+    <ProgressBar
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/progressBar"
+        android:layout_below="@+id/textView25"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="75dp" />
+
+    <ProgressBar
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/progressBar2"
+        android:layout_below="@+id/progressBar"
+        android:layout_centerHorizontal="true" />
 
     <!--<com.github.mikephil.charting.charts.PieChart-->
         <!--android:id="@+id/chart"-->
