--- a/MMA/app/src/main/res/menu/activity_main_drawer.xml
+++ b/MMA/app/src/main/res/menu/activity_main_drawer.xml
@@ -7,12 +7,15 @@
             android:title="Home" />
         <item
             android:id="@+id/menu_Xpense"
+            android:src="@drawable/ic_add_shopping_cart_black_24dp"
             android:title="New Expense" />
         <item
             android:id="@+id/menu_shpnList"
+            android:src="@drawable/ic_shopping_basket_black_24dp"
             android:title="Shopping List" />
         <item
             android:id="@+id/menu_Overview"
+            android:src="@drawable/ic_equalizer_black_24dp"
             android:title="Overview" />
         <item
             android:id="@+id/menu_Achievements"
