--- a/MMA/app/src/main/res/layout/new_xpense_fragment.xml
+++ b/MMA/app/src/main/res/layout/new_xpense_fragment.xml
@@ -9,11 +9,6 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="New Expense"
-        android:id="@+id/textView24" />
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -88,6 +83,15 @@
         android:layout_alignBottom="@+id/needSwitch"
         android:layout_alignLeft="@+id/unplannedText"
         android:layout_alignStart="@+id/unplannedText" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Please enter your purchase"
+        android:id="@+id/textView26"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="35dp" />
 
 
 </RelativeLayout>
